--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,6 +4,9 @@
     <h1>My Cart</h1>
   </header>
 
+
+  <% if cart.empty? %>
+        <div class="alert alert-danger" role="alert">Your cart is currently empty. Please shop first: <%= link_to 'Here', :root %> </div>  
   <div class="panel panel-default items">
     <table class="table table-bordered">
       <thead>
@@ -15,8 +18,10 @@
         </tr>
       </thead>
       <tbody>
+    <% else %>
         <% enhanced_cart.each do |item| %>
           <%= render 'item', product: item[:product], quantity: item[:quantity].to_i %>
+        <% end %>
         <% end %>
       </tbody>
       <tfoot>
