--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -39,7 +39,8 @@ main section.categories-show {
       text-align: center;
       border-radius: 0.25em;
       border: 0.1em solid rgba(0, 130, 29, 0.3);
-      box-shadow: rgba(0, 130, 29, 0.16) 0px 3px 6px, rgba(0, 130, 29, 0.23) 0px 3px 6px;
+      box-shadow: rgba(0, 130, 29, 0.16) 0px 3px 6px,
+        rgba(0, 130, 29, 0.23) 0px 3px 6px;
       // transition: opacity 300ms linear;
 
       &:hover {
@@ -90,6 +91,10 @@ main section.categories-show {
           padding-left: 1em;
           padding-right: 1em;
           background-color: rgba(0, 130, 29, 0.7);
+          color: white;
+        }
+        .btn.out {
+          background-color: rgb(216, 90, 90);
           color: white;
         }
       }
