--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -1,38 +1,17 @@
 <section class="container">
+  
   <br>
-  <h1>Admin Dashboard</h1>
-  <br>
 
-  <table class="table table-bordered">
-
-    <thead>
-      <tr>
-        <th>Categories</th>
-        <th>Number of Products in Category</th>
-      </tr>
-    </thead>
-
-    <tbody>
-      <tr>
-        <td>Evergreens</td>
-        <td><a href="categories/1"><%= @Evergreens_count %></a></td>
-      </tr>
-      <tr>
-        <td>Shrubs</td>
-        <td><a href="categories/2"><%= @Shrubs_count %></a></td>
-      </tr>
-      <tr>
-        <td>Trees</td>
-        <td><a href="categories/3"><%= @Trees_count %></a></td>
-      </tr>
-    </tbody>
-
-    <tfoot>
-      <tr>
-        <th>Total number of products</th>
-        <td><a href="/admin/products"><%= @product_count %></a></td>
-      </tr>
-    </tfoot>
-  </table>
-
+  <h1 lcass="mt-5">Admin Dashboard</h1>
+  <div class="row">
+    <div class"col-md-6">
+      <div class="card mt-4">
+        <div class="card-body">
+          <h4 class="card-title">Products Count</h4>
+          <p class="card-text h6"><%= @product_count %></p>
+          <tr><%= link_to "View Products", admin_products_path, class: "btn btn-outline-success" %></tr>
+        </div>
+      </div>
+    </div>
+    
 </section>
