--- a/app/views/admin/dashboard/show.html.erb
+++ b/app/views/admin/dashboard/show.html.erb
@@ -13,5 +13,14 @@
         </div>
       </div>
     </div>
-    
+    <div class"col-md-6">
+      <div class="card mt-4">
+        <div class="card-body">
+          <h4 class="card-title">Categories Count</h4>
+          <p class="card-text h6"><%= @category_count %></p>
+          <tr><%= link_to "View Categories", admin_categories_path, class: "btn btn-outline-success" %></tr>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
