--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -61,7 +61,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <%= link_to "About Us", about_path, class: "nav-link" %>
+          <%= link_to "About Us", about_index_path, class: "nav-link" %>
         </li>              
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
