--- a/app/views/layouts/_top_nav.html.erb
+++ b/app/views/layouts/_top_nav.html.erb
@@ -41,7 +41,45 @@
             <% end %>
           <%# </ul>
         </li> %>
+        
+        <li class="nav-item">
+          <%= link_to "About Us", about_index_path, class: "nav-link" %>
+        </li>    
+      
       </ul>
+
+      <!-- Log In/Sign Up -->
+      
+      <ul class="navbar-nav">
+        <% if current_user %>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle text-danger"
+              href="#"
+              id="navbarDropdownUser"
+              role="button"
+              data-bs-toggle="dropdown"
+              aria-expanded="false"
+            >
+            Logged in as <%= current_user.name %>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownUser">
+              <li><%= link_to 'Logout', '/logout', class: "nav-link" %></li>
+            </ul>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to 'Login', '/login', class: "nav-link" %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'Signup', '/signup', class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+
+
+      <!-- Admin Menu -->
+
       <ul class="navbar-nav">
         <li class="nav-item dropdown">
           <a
@@ -60,9 +98,6 @@
             <li><%= link_to 'Categories', [:admin, :categories], class: "nav-link" %></li>
           </ul>
         </li>
-        <li class="nav-item">
-          <%= link_to "About Us", about_index_path, class: "nav-link" %>
-        </li>              
         <li class="nav-item end-0">
           <%= link_to cart_path, class: "nav-link " do %> <%= fa_icon "shopping-cart" %>
           My Cart (<%= cart.size %>) <% end %>
